--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "D": "^1.0.0",
+    "axios": "^1.6.0",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
